--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </main>
         
         <div class="sell-book-section">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8HTD9yvBa_bLhOEVLoWGYOVUQx4RJR8qL0l0utA4UipMhGA/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="sell-button">
+            <a href="link" target="_blank" rel="noopener noreferrer" class="sell-button">
                 📖 Vendi il tuo libro
             </a>
         </div>
