--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#0f1f35">
     <title>RIsell! - rivendi i tuoi libri!</title>
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -24,7 +27,7 @@
                 <li><a href="#" id="docs-link">Documentazione</a></li>
                 <li><a href="#" id="privacy-link">Informativa Privacy</a></li>
             </ul>
-            <div class="menu-search">
+            <div class="menu-search menu-search-desktop">
                 <input 
                     type="text" 
                     id="menu-search-input" 
@@ -33,8 +36,20 @@
                 >
                 <button id="menu-clear-search" class="menu-clear-btn" aria-label="Clear search">✕</button>
             </div>
+            <button class="menu-toggle" aria-label="Apri menu">☰</button>
         </div>
     </nav>
+    <div class="menu-search-row">
+        <div class="menu-search">
+            <input 
+                type="text" 
+                id="menu-search-input-mobile" 
+                placeholder="🔍 Cerca..."
+                aria-label="Search books"
+            >
+            <button id="menu-clear-search-mobile" class="menu-clear-btn" aria-label="Clear search">✕</button>
+        </div>
+    </div>
     <div class="container">
         <header class="site-header">
             <h1>RIsell</h1>
@@ -69,4 +84,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
