--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         
         <footer>
-            <p>&copy; 2025 RIsell! </p>
+            <p> licenza libera "RIsell" by Foma Grasz </p>
         </footer>
     </div>
 
