--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="theme-color" content="#0f1f35">
     <title>RIsell! - rivendi i tuoi libri!</title>
     <link rel="stylesheet" href="styles.css">
-        /* Ensure the site title and description are aligned to the left */
+        <!-- /* Ensure the site title and description are aligned to the left */
         .site-header {
             text-align: left;
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: flex-start;-->
         }
     </style>
 </head>
