--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             text-align: left;
             display: flex;
             flex-direction: column;
-            align-items: flex-start;-->
-        }
+            align-items: flex-start;
+        }-->
     </style>
 </head>
 <body>
