--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="menu-content">
             <img src="logo.png" alt="RIsell logo" class="menu-logo">
             <ul class="menu-links">
-                <li><a href="#" id="about-link">Chi siamo</a></li>
-                <li><a href="#" id="docs-link">Documentazione</a></li>
-                <li><a href="#" id="privacy-link">Informativa Privacy</a></li>
+                <li><a href="#" id="https://www.instagram.com/lista50special/">Chi siamo</a></li>
+                <li><a href="#" id="https://github.com/FomaGrasz/RIsell">Documentazione</a></li> <!-- tra gli apici mettere i link necessari -->
+                <li><a href="#" id="https://github.com/FomaGrasz/RIsell/blob/main/informativaprivacy.md">Informativa Privacy</a></li>
             </ul>
             <div class="menu-search menu-search-desktop">
                 <input 
