--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="menu-content">
             <img src="logo.png" alt="RIsell logo" class="menu-logo">
             <ul class="menu-links">
-                <li><a href="#" id="https://www.instagram.com/lista50special/">Chi siamo</a></li>
-                <li><a href="#" id="https://github.com/FomaGrasz/RIsell">Documentazione</a></li> <!-- tra gli apici mettere i link necessari -->
-                <li><a href="#" id="https://github.com/FomaGrasz/RIsell/blob/main/informativaprivacy.md">Informativa Privacy</a></li>
+                <li><a href="https://www.instagram.com/lista50special/" target="_blank" rel="noopener noreferrer">Chi siamo</a></li>
+                <li><a href="https://github.com/FomaGrasz/RIsell" target="_blank" rel="noopener noreferrer">Documentazione</a></li>
+                <li><a href="https://github.com/FomaGrasz/RIsell/blob/main/informativaprivacy.md" target="_blank" rel="noopener noreferrer">Informativa Privacy</a></li>
             </ul>
             <div class="menu-search menu-search-desktop">
                 <input 
