--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </main>
         
         <div class="sell-book-section">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8HTD9yvBa_bLhOEVLoWGYOVUQx4RJR8qL0l0utA4UipMhGA/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="sell-button">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjtFl1dVM-e0UnYBbzJ5c6epfkrgj0Jo9sn6w6VmSWSLgVfQ/viewform?usp=publish-editor" target="_blank" rel="noopener noreferrer" class="sell-button">
                 Vendi il tuo libro
             </a>
         </div>
