Update title and header text in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#0f1f35">
-    <title>RIsell! - rivendi i tuoi libri!</title>
+    <title> Rivendi i tuoi libri!</title>
     <link rel="stylesheet" href="styles.css">
         <!-- /* Ensure the site title and description are aligned to the left */
         .site-header {
@@ -51,7 +51,7 @@
     </div>
     <div class="container">
         <header class="site-header">
-            <h1>RIsell</h1>
+            <h1>Risparmia sui libri!</h1>
             <p>demo del sito per la rivendità dei libri</p>
         </header>
         
